# quill

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mkdocs.yml
.github/: README.md
.github/workflows/: ci.yml  docs.yml
crates/quill-cli/: Cargo.toml  README.md
crates/quill-cli/src/: main.rs
crates/quill-cli/src/commands/: bench.rs  call.rs  compat.rs  explain.rs  gen.rs  mod.rs
crates/quill-cli/tests/: call_integration.rs
crates/quill-client/: Cargo.toml
crates/quill-client/src/: client.rs  h3_client.rs  lib.rs  retry.rs  streaming.rs
crates/quill-codegen/: Cargo.toml
crates/quill-codegen/src/: client.rs  lib.rs  playground.rs  server.rs  service.rs
crates/quill-core/: Cargo.toml
crates/quill-core/src/: error.rs  flow_control.rs  framing.rs  lib.rs  profile.rs  stream.rs
crates/quill-core/src/playground/: config.rs  context.rs  debug.rs  event.rs  mod.rs
crates/quill-grpc-bridge/src/: lib.rs
crates/quill-playground/: Cargo.toml
crates/quill-playground/src/: controller.rs  error.rs  interceptor.rs  lib.rs  time.rs
crates/quill-proto/: Cargo.toml  build.rs
crates/quill-proto/src/: lib.rs
crates/quill-python/: Cargo.toml  README.md  pyproject.toml
crates/quill-python/src/: client.rs  dtype.rs  gpu.rs  lib.rs  tensor.rs  token.rs
crates/quill-rest-gateway/: Cargo.toml
crates/quill-rest-gateway/src/: error.rs  lib.rs  mapping.rs  middleware.rs  openapi.rs  router.rs  streaming.rs
crates/quill-rest-gateway/src/middleware/: auth.rs  cors.rs  ratelimit.rs
crates/quill-server/: Cargo.toml
crates/quill-server/src/: h3_server.rs  handler.rs  lib.rs  middleware.rs  negotiation.rs  observability.rs  request_stream.rs  router.rs  server.rs  streaming.rs
crates/quill-tensor/: Cargo.toml
crates/quill-tensor/src/: buffer.rs  dlpack.rs  dtype.rs  frame.rs  lib.rs  stream.rs  tensor.rs  token.rs
crates/quill-transport/: Cargo.toml
crates/quill-transport/src/: classic.rs  hyper.rs  lib.rs  negotiation.rs  turbo.rs
deployment/examples/monitoring/: alerts.yml
deployment/examples/monitoring/grafana/dashboards/: dashboards.yml  quill-overview.json
docs/: compression.md  flow-control.md  gpu-streaming.md  grpc-bridge.md  http2.md  http3.md  index.md  middleware.md  observability.md  performance.md  python-bindings.md  resilience.md  rest-gateway.md  tracing.md
docs/concepts/: architecture.md  error-handling.md  frame-protocol.md  transport-profiles.md
docs/getting-started/: first-service.md  installation.md  quickstart.md
docs/guides/: client.md  server.md  streaming.md
docs/reference/: cli.md  configuration.md
docs/stylesheets/: extra.css
examples/: README.md
examples/chat/tests/: integration.rs
examples/echo/: Cargo.toml
examples/echo/src/: lib.rs
examples/echo/tests/: e2e_profiles.rs  integration.rs
examples/greeter/: Cargo.toml  build.rs
examples/greeter/proto/: greeter.proto
examples/greeter/src/: lib.rs
examples/grpc-bridge/: Cargo.toml  build.rs
examples/h3-datagram/: Cargo.toml
examples/h3-datagram/src/: lib.rs
examples/h3-echo/: Cargo.toml  build.rs
examples/h3-echo/src/: lib.rs
examples/h3-streaming/: Cargo.toml  build.rs
examples/h3-streaming/src/: lib.rs
examples/llm-inference/: Cargo.toml
examples/llm-inference/src/: lib.rs
examples/streaming/: Cargo.toml  build.rs
examples/streaming/src/: lib.rs
examples/streaming/tests/: integration.rs
examples/upload/tests/: integration.rs
proto/echo/v1/: echo.proto
proto/log/v1/: log.proto
proto/quill/: agent.proto  annotations.proto  inference.proto  tensor.proto
