[package]
name = "quill-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for the Quill RPC framework (gen/call/bench/compat/explain)"

[[bin]]
name = "quill"
path = "src/main.rs"

[dependencies]
quill-client = { workspace = true }
quill-codegen = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
