[package]
name = "quill-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for the Quill RPC framework (gen/call/bench/compat/explain)"

[[bin]]
name = "quill"
path = "src/main.rs"

[dependencies]
quill-client = { workspace = true }
quill-codegen = { workspace = true }
quill-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
futures = "0.3"
url = "2.5"
hdrhistogram = "7.5"
serde_yaml = "0.9"
prost-reflect = { version = "0.14", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
