[package]
name = "quill-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generator (protoc plugin) for the Quill RPC framework"

[dependencies]
quill-proto = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-build = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
heck = "0.5"
