[package]
name = "quill-rest-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "REST gateway for Quill RPC with OpenAPI support"

[dependencies]
quill-core = { workspace = true }
quill-client = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
axum = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { version = "0.14", features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
base64 = "0.21"

[dev-dependencies]
tokio = { workspace = true }
