[package]
name = "greeter-example"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
quill-server = { workspace = true }
quill-client = { workspace = true }
quill-core = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
futures = "0.3"

[build-dependencies]
quill-codegen = { path = "../../crates/quill-codegen" }
prost-build = { workspace = true }
