[package]
name = "h3-streaming-example"
version.workspace = true
edition.workspace = true
publish = false
description = "HTTP/3 streaming example demonstrating server-side streaming over QUIC"

[dependencies]
quill-server = { workspace = true, features = ["http3"] }
quill-client = { workspace = true, features = ["http3"] }
quill-transport = { workspace = true, features = ["http3"] }
quill-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
